--- a/index.html
+++ b/index.html
@@ -2,57 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hyggshi OS</title>
-  <meta name="description" content="Hệ điều hành mô phỏng Roblox do cộng đồng Hyggshi phát triển.">
-  <link rel="icon" href="https://hyggshi-os.fandom.com/wiki/Special:FilePath/logo.png">
-
-  <!-- Schema SEO -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "SoftwareApplication",
-    "name": "Hyggshi OS",
-    "operatingSystem": "Roblox",
-    "applicationCategory": "Operating System",
-    "description": "Hyggshi OS là một hệ điều hành mô phỏng được phát triển trong Roblox, lấy cảm hứng từ Linux và Windows.",
-    "creator": {
-      "@type": "Person",
-      "name": "Tên của bạn"
-    },
-    "image": "https://hyggshi-os.fandom.com/wiki/Special:FilePath/logo.png",
-    "url": "https://hyggshi-os.fandom.com/"
-  }
-  </script>
-
+  <meta name="description" content="Hệ điều hành mô phỏng Roblox: Hyggshi OS">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(#2c3e50, #34495e);
+      background: #1e1e2f;
       color: white;
-      margin: 0;
-      padding: 20px;
-    }
-    .logo {
-      width: 100px;
+      font-family: sans-serif;
+      padding: 40px;
     }
     .box {
-      background-color: #1abc9c;
+      background: #2a2a40;
       padding: 20px;
       border-radius: 10px;
       max-width: 600px;
       margin: auto;
-      box-shadow: 0 0 20px #000;
+      box-shadow: 0 0 10px black;
+    }
+    h1 {
+      color: #00ffe0;
     }
   </style>
 </head>
 <body>
   <div class="box">
-    <img src="https://hyggshi-os.fandom.com/wiki/Special:FilePath/logo.png" class="logo" alt="Hyggshi Logo">
     <h1>Hyggshi OS</h1>
-    <p>Hyggshi OS là một hệ điều hành mô phỏng được phát triển trong Roblox, lấy cảm hứng từ Linux và Windows.</p>
-    <p>Phiên bản hiện tại: <strong>2.1.6</strong></p>
-    <p><a href="https://hyggshi-os.fandom.com/" style="color:white;">Truy cập wiki Hyggshi OS</a></p>
+    <p>Chào mừng đến với hệ điều hành mô phỏng Roblox: <strong>Hyggshi OS</strong>!</p>
+    <p>Trang web chính thức đang được xây dựng.</p>
+    <p><a href="https://hyggshi-os.fandom.com" style="color: #00ffe0;">Xem wiki Hyggshi OS</a></p>
   </div>
 </body>
 </html>
