--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       "name": "hyggshiosdeveloper"
     },
     "description": "Hyggshi OS là một hệ điều hành mô phỏng được phát triển trong Roblox, lấy cảm hứng từ Linux và Windows.",
-    "url": "https://hyggshiosdeveloper.github.io/hyggshi-site/",
+    "url": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/",
     "image": "https://hyggshi-os.fandom.com/wiki/Special:FilePath/logo.png",
     "screenshot": "https://hyggshi-os.fandom.com/wiki/Special:FilePath/desktop-preview.png",
     "applicationSuite": "Hyggshi",
