--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hyggshi OS</title>
-  <meta name="description" content="Hyggshi OS là một hệ điều hành mô phỏng trong Roblox.">
+  <title>Hyggshi OS - Hệ điều hành mô phỏng trên Roblox</title>
+  <meta name="description" content="Hyggshi OS là một hệ điều hành mô phỏng được phát triển trên Roblox với trải nghiệm độc đáo và sáng tạo." />
+  <meta name="keywords" content="Hyggshi OS, Roblox OS, hệ điều hành Roblox, mô phỏng Roblox, Hyggshi" />
+  <meta name="author" content="Hyggshi OS Developer" />
+  <link rel="canonical" href="https://hyggshiosdeveloper.github.io/hyggshi-os-website/" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Hyggshi OS - Hệ điều hành Roblox" />
+  <meta property="og:description" content="Hệ điều hành mô phỏng trên Roblox, mang lại trải nghiệm sáng tạo." />
+  <meta property="og:url" content="https://hyggshiosdeveloper.github.io/hyggshi-os-website/" />
+  <meta property="og:image" content="https://hyggshiosdeveloper.github.io/hyggshi-os-website/assets/og-image.png" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Hyggshi OS - Roblox OS" />
+  <meta name="twitter:description" content="Khám phá hệ điều hành Hyggshi OS trên Roblox." />
+  <meta name="twitter:image" content="https://hyggshiosdeveloper.github.io/hyggshi-os-website/assets/og-image.png" />
 
   <!-- Schema.org JSON-LD -->
   <script type="application/ld+json">
@@ -13,61 +29,36 @@
     "@type": "SoftwareApplication",
     "name": "Hyggshi OS",
     "operatingSystem": "Roblox",
-    "applicationCategory": "Operating System",
-    "softwareVersion": "2.1.6",
-    "creator": {
-      "@type": "Person",
-      "name": "hyggshiosdeveloper"
-    },
-    "description": "Hyggshi OS là một hệ điều hành mô phỏng được phát triển trong Roblox, lấy cảm hứng từ Linux và Windows.",
+    "applicationCategory": "GameApplication",
+    "description": "Hệ điều hành mô phỏng trong Roblox.",
     "url": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/",
-    "image": "https://hyggshi-os.fandom.com/wiki/Special:FilePath/logo.png",
-    "screenshot": "https://hyggshi-os.fandom.com/wiki/Special:FilePath/desktop-preview.png",
-    "applicationSuite": "Hyggshi",
-    "releaseNotes": "Phiên bản 2.1.6 thêm giao diện OOBE, Zashi Messaging và sửa nhiều lỗi."
+    "author": {
+      "@type": "Organization",
+      "name": "Hyggshi OS Developer"
+    },
+    "image": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/assets/og-image.png"
   }
   </script>
 
   <style>
-    body {
-      font-family: "Segoe UI", sans-serif;
-      background-color: #1e1e2f;
-      color: white;
-      padding: 40px;
-      margin: 0;
-    }
-    .container {
-      background: #2a2a40;
-      padding: 20px;
-      border-radius: 10px;
-      max-width: 650px;
-      margin: auto;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-    }
-    h1 {
-      color: #00ffc8;
-      margin-top: 0;
-    }
-    a {
-      color: #00ffc8;
+    body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background: #f7f7f7; }
+    h1 { color: #333; }
+    p { font-size: 18px; color: #555; }
+    a.button {
+      display: inline-block;
+      padding: 10px 20px;
+      margin-top: 20px;
+      background: #0078d7;
+      color: #fff;
       text-decoration: none;
+      border-radius: 5px;
     }
-    a:hover {
-      text-decoration: underline;
-    }
-    .logo {
-      width: 100px;
-      margin-bottom: 10px;
-    }
+    a.button:hover { background: #005ea6; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img src="https://hyggshi-os.fandom.com/wiki/Special:FilePath/logo.png" alt="Hyggshi Logo" class="logo">
-    <h1>Hyggshi OS</h1>
-    <p><strong>Phiên bản:</strong> 2.1.6</p>
-    <p>Hệ điều hành mô phỏng Roblox, lấy cảm hứng từ Linux và Windows.</p>
-    <p><a href="https://hyggshi-os.fandom.com" target="_blank">📖 Xem wiki chính thức</a></p>
-  </div>
+  <h1>Chào mừng đến với Hyggshi OS</h1>
+  <p>Hệ điều hành mô phỏng trên Roblox với trải nghiệm độc đáo.</p>
+  <a href="https://www.roblox.com" class="button">Khám phá ngay trên Roblox</a>
 </body>
 </html>
