--- a/index.html
+++ b/index.html
@@ -1,79 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hyggshi-OS-project-center</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hyggshi OS Project Center – Tương lai của lập trình Roblox</title>
+  <meta name="description" content="Hyggshi OS Project Center là nơi phát triển các dự án Roblox mô phỏng hệ điều hành, thiết kế hiện đại, tốc độ cao và trải nghiệm tối ưu trên mọi thiết bị." />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Hyggshi OS Project Center – Tương lai của Roblox OS" />
+  <meta property="og:description" content="Trung tâm phát triển các dự án Roblox hệ điều hành, thiết kế đẹp, tốc độ nhanh, hỗ trợ mobile." />
+  <meta property="og:image" content="https://hyggshiosdeveloper.github.io/hyggshi-os-website/og-image.png" />
+  <meta property="og:url" content="https://hyggshiosdeveloper.github.io/hyggshi-os-website/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Hyggshi OS Project Center – Roblox OS" />
+  <meta name="twitter:description" content="Phát triển hệ điều hành Roblox với thiết kế đẹp, hiệu suất cao, thân thiện mobile." />
+  <meta name="twitter:image" content="https://hyggshiosdeveloper.github.io/hyggshi-os-website/og-image.png" />
+
+  <!-- JSON-LD Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Hyggshi OS Project Center",
+    "url": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/",
+    "description": "Nền tảng phát triển hệ điều hành Roblox hiện đại.",
+    "creator": {
+      "@type": "Person",
+      "name": "Nguyễn Minh Phúc"
+    }
+  }
+  </script>
+
+  <link rel="icon" href="favicon.ico" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <header class="header">
-            <nav class="nav">
-                <div class="logo">
-                    <span class="logo-icon">✨</span>
-                    <span class="logo-text">Hyggshi-OS-project-center</span>
-                </div>
-                <ul class="nav-menu">
-                    <li><a href="#home" class="nav-link active">Home</a></li>
-                    <li><a href="About.html" class="nav-link">About</a></li>
-                    <li><a href="#projects" class="nav-link">Projects</a></li>
-                    <li><a href="History.html" class="nav-link">History</a></li>
-                    <li><a href="#services" class="nav-link">Services</a></li>
-                    <li><a href="#contact" class="nav-link">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+  <div class="container">
+    <header class="header">
+      <nav class="nav">
+        <div class="logo">
+          <span class="logo-icon">✨</span>
+          <span class="logo-text">Hyggshi OS</span>
+        </div>
+        <ul class="nav-menu">
+          <li><a href="index.html" class="nav-link active">Home</a></li>
+          <li><a href="About.html" class="nav-link">About</a></li>
+          <li><a href="projects.html" class="nav-link">Projects</a></li>
+          <li><a href="History.html" class="nav-link">History</a></li>
+        </ul>
+      </nav>
+    </header>
 
-        <main class="main">
-            <section class="hero">
-                <div class="hero-content">
-                    <h1 class="hero-title">Welcome to the Future</h1>
-                    <p class="hero-subtitle">Experience modern web design with cutting-edge technology and beautiful interfaces.</p>
-                    <div class="hero-buttons">
-                        <button class="btn btn-primary" onclick="displayMessage()">Get Started</button>
-                        <button class="btn btn-secondary" onclick="showFeatures()">Learn More</button>
-                        <a class="btn btn-github" href="https://github.com/HyggshiOSDeveloper/Hyggshi-OS-project-center" target="_blank" rel="noopener">Get GitHub Project</a>
-                    </div>
-                </div>
-                <div class="hero-visual">
-                    <div class="floating-card">
-                        <div class="card-icon">🚀</div>
-                        <h3>Fast & Responsive</h3>
-                        <p>Optimized for all devices</p>
-                    </div>
-                </div>
-            </section>
+    <main class="main">
+      <section class="hero">
+        <div class="hero-content">
+          <h1 class="hero-title">Hyggshi OS Project Center</h1>
+          <p class="hero-subtitle"><strong>Chào mừng đến với tương lai</strong></p>
+          <p>Trải nghiệm thiết kế web hiện đại, công nghệ tiên tiến và giao diện đẹp mắt – tất cả trong dự án Hyggshi OS mô phỏng hệ điều hành trên Roblox.</p>
+          <div class="hero-buttons">
+            <a class="btn btn-primary" href="https://www.roblox.com" target="_blank">Khám phá trên Roblox</a>
+            <a class="btn btn-github" href="https://github.com/HyggshiOSDeveloper/Hyggshi-OS-project-center" target="_blank">Xem trên GitHub</a>
+            <a class="btn btn-secondary" href="#learn">Tìm hiểu thêm</a>
+          </div>
+        </div>
+        <div class="hero-visual">
+          <div class="floating-card">
+            <div class="card-icon">🚀</div>
+            <h3>Nhanh & Phản hồi tốt</h3>
+            <p>Tối ưu cho mọi thiết bị</p>
+          </div>
+        </div>
+      </section>
 
-            <section class="features">
-                <div class="feature-grid">
-                    <div class="feature-card">
-                        <div class="feature-icon">🎨</div>
-                        <h3>Modern Design</h3>
-                        <p>Beautiful and intuitive user interfaces</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon">⚡</div>
-                        <h3>Lightning Fast</h3>
-                        <p>Optimized performance and speed</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon">📱</div>
-                        <h3>Mobile First</h3>
-                        <p>Perfect on every screen size</p>
-                    </div>
-                </div>
-            </section>
+      <section class="features" id="learn">
+        <div class="feature-grid">
+          <div class="feature-card">
+            <div class="feature-icon">🚀</div>
+            <h3>Nhanh và phản hồi tốt</h3>
+            <p>Tối ưu cho mọi thiết bị</p>
+          </div>
+          <div class="feature-card">
+            <div class="feature-icon">🎨</div>
+            <h3>Thiết kế hiện đại</h3>
+            <p>Giao diện đẹp và trực quan</p>
+          </div>
+          <div class="feature-card">
+            <div class="feature-icon">⚡</div>
+            <h3>Hiệu suất vượt trội</h3>
+            <p>Tốc độ tải nhanh chóng</p>
+          </div>
+          <div class="feature-card">
+            <div class="feature-icon">📱</div>
+            <h3>Thân thiện di động</h3>
+            <p>Hiển thị hoàn hảo trên mọi màn hình</p>
+          </div>
+        </div>
+      </section>
+    </main>
 
-
-        <footer class="footer">
-            <p>&copy; 2024 - 2025 Hyggshi OS Project Center. All rights reserved.</p>
-        </footer>
-    </div>
-
-    <script src="script.js"></script>
+    <footer class="footer">
+      <p>© 2024 - 2025 Hyggshi OS Project Center. All rights reserved.</p>
+    </footer>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html> 
