--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <section class="hero">
         <div class="hero-content">
           <h1 class="hero-title">Hyggshi OS Project Center</h1>
-          <p class="hero-subtitle"><strong>Chào mừng đến với tương lai</strong></p>
+          <p class="hero-subtitle"><strong>Chào mừng đến với Hyggshi OS Project Center</strong></p>
           <p>Trải nghiệm thiết kế web hiện đại, công nghệ tiên tiến và giao diện đẹp mắt – tất cả trong dự án Hyggshi OS mô phỏng hệ điều hành trên Roblox.</p>
           <div class="hero-buttons">
             <a class="btn btn-primary" href="https://www.roblox.com" target="_blank">Khám phá trên Roblox</a>
