--- a/index.html
+++ b/index.html
@@ -188,6 +188,13 @@
           <li><a href="About.html" class="nav-link">About</a></li>
           <li><a href="projects.html" class="nav-link">Projects</a></li>
           <li><a href="History.html" class="nav-link">History</a></li>
+          <li><a href="The-Cases.html" class="nav-link">The Cases</a></li>
+          <li>
+            <a href="https://discord.gg/PZuDkFzJtc" class="nav-link" target="_blank" title="Join Discord" style="display: flex; align-items: center; gap: 0.3rem;">
+              <svg height="22" viewBox="0 0 32 32" width="22" fill="currentColor" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;"><path d="M27.2 6.8A26.9 26.9 0 0 0 20.9 5a1 1 0 0 0-.5.1c-.2.1-.3.3-.3.5-.2.7-.4 1.5-.5 2.2-2.7-.4-5.4-.4-8.1 0-.1-.7-.3-1.5-.5-2.2a.7.7 0 0 0-.3-.5c-.2-.1-.4-.2-.5-.1A26.9 26.9 0 0 0 4.8 6.8a.7.7 0 0 0-.3.3C1.7 11.2.3 15.5.6 19.8a.7.7 0 0 0 .2.4c3.2 2.4 6.3 3.8 9.4 4.7a1 1 0 0 0 1.1-.4c.3-.4.6-.9.8-1.3-3.1-.9-6-2.2-8.7-4.1a.2.2 0 0 1-.1-.2c0-.1 0-.2.1-.2.2-.2.4-.3.6-.2 7.7 5.6 18.1 5.6 25.7 0 .2-.1.4 0 .6.2 0 .1 0 .2-.1.2-2.7 1.9-5.6 3.2-8.7 4.1.3.5.6.9.8 1.3a1 1 0 0 0 1.1.4c3.1-.9 6.2-2.3 9.4-4.7a.7.7 0 0 0 .2-.4c.4-4.3-1-8.6-3.9-12.7a.7.7 0 0 0-.3-.3zM11.7 18.6c-1.1 0-2-1-2-2.1 0-1.2.9-2.1 2-2.1s2 1 2 2.1c0 1.2-.9 2.1-2 2.1zm8.6 0c-1.1 0-2-1-2-2.1 0-1.2.9-2.1 2-2.1s2 1 2 2.1c0 1.2-.9 2.1-2 2.1z"/></svg>
+              <span style="display:none;">Discord</span>
+            </a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -227,20 +234,20 @@
             </div>
             <div class="gallery-slide">
               <div class="gallery-image">
-                <img src="Resources/14.png" alt="Zashi Messaging" style="max-width: 100%; max-height: 100%; object-fit: contain;">
+                <img src="Resources/upscalemedia-transformed (1).jpeg" alt="Zashi Messaging" style="max-width: 100%; max-height: 100%; object-fit: contain;">
               </div>
               <div class="gallery-caption">
-                <h3>Zashi Messaging v1.23 (Beta 1)</h3>
-                <p>Hệ thống nhắn tin nội bộ</p>
+                <h3>Hình nền hệ thống</h3>
+                <p>Giao diện nền của Hyggshi OS</p>
               </div>
             </div>
             <div class="gallery-slide">
               <div class="gallery-image">
-                <img src="Resources/road-1920x1080-5k-4k-wallpaper-8k-clouds-sunset-12465.jpg" alt="RRT Technology" style="max-width: 100%; max-height: 100%; object-fit: contain;">
+                <img src="Resources/15.png" alt="RRT Technology" style="max-width: 100%; max-height: 100%; object-fit: contain;">
               </div>
               <div class="gallery-caption">
-                <h3>RRT (Run Roblox Technology)</h3>
-                <p>Công nghệ chạy Roblox</p>
+                <h3>Hình nền hệ thống</h3>
+                <p>Giao diện nền của Hyggshi OS</p>
               </div>
             </div>
             <div class="gallery-slide">
@@ -250,6 +257,24 @@
               <div class="gallery-caption">
                 <h3>Hình nền hệ thống</h3>
                 <p>Giao diện nền của Hyggshi OS</p>
+              </div>
+            </div>
+            <div class="gallery-slide">
+              <div class="gallery-image">
+                <img src="Resources/road-1920x1080-5k-4k-wallpaper-8k-clouds-sunset-12465.jpg" alt="Background Image" style="max-width: 100%; max-height: 100%; object-fit: contain;">
+              </div>
+              <div class="gallery-caption">
+                <h3>Hình nền hệ thống</h3>
+                <p>Giao diện nền của Hyggshi OS</p>
+              </div>
+            </div>
+            <div class="gallery-slide">
+              <div class="gallery-image">
+                <img src="Resources/welcome_background.png" alt="Background Image" style="max-width: 100%; max-height: 100%; object-fit: contain;">
+              </div>
+              <div class="gallery-caption">
+                <h3>Tối ưu cho mọi thiết bị</h3>
+                <p>Tốc độ tải nhanh chóng</p>
               </div>
             </div>
           </div>
@@ -262,6 +287,8 @@
             <div class="gallery-dot" onclick="goToSlide(1)"></div>
             <div class="gallery-dot" onclick="goToSlide(2)"></div>
             <div class="gallery-dot" onclick="goToSlide(3)"></div>
+            <div class="gallery-dot" onclick="goToSlide(4)"></div>
+            <div class="gallery-dot" onclick="goToSlide(5)"></div>
           </div>
         </div>
         
@@ -297,7 +324,7 @@
     </main>
 
     <footer class="footer">
-      <p>© 2024 - 2025 Hyggshi OS Project Center. All rights reserved.</p>
+      <p>© 2024 - 2025 Hyggshi OS Project Center. All rights reserved. | <a href="https://discord.gg/PZuDkFzJtc" target="_blank" style="color:#7289da;text-decoration:underline;">Tham gia Discord</a></p>
     </footer>
   </div>
   
