--- a/index.html
+++ b/index.html
@@ -319,6 +319,16 @@
             <h3>Thân thiện di động</h3>
             <p>Hiển thị hoàn hảo trên mọi màn hình</p>
           </div>
+          <div class="feature-card">
+            <div class="feature-icon">🛠️</div>
+            <h3>mã nguồn mở</h3>
+            <p>tùy chỉnh mạnh</p>
+          </div>
+          <div class="feature-card">
+            <div class="feature-icon">🔄</div>
+            <h3>tính năng có sẵn</h3>
+            <p>tất cả mọi tính năng cũng có hệ điều hành thật</p>
+          </div>
         </div>
       </section>
     </main>
