--- a/projects.html
+++ b/projects.html
@@ -324,6 +324,18 @@
                 </ul>
             </div>
 
+            <!-- Hyggshi OS Flex -->
+            <div class="project-section">
+                <h2>🧩 Hyggshi OS Flex <span class="status-badge status-development">Đang phát triển</span></h2>
+                <p>Phiên bản nhẹ và linh hoạt, được thiết kế để dễ dàng chỉnh sửa, tùy biến và phát triển theo ý muốn.</p>
+                <ul>
+                    <li>Thích hợp cho người dùng sáng tạo hoặc muốn tự xây dựng hệ điều hành riêng.</li>
+                    <li>Dễ tích hợp các mô-đun, tính năng, hoặc theme từ các bản Hyggshi OS khác.</li>
+                    <li>Lý tưởng để học tập, thử nghiệm hoặc đóng góp cộng đồng.</li>
+                </ul>
+            </div>
+            
+
             <!-- Dự án phụ trợ -->
             <div class="project-section">
                 <h2>🔧 Dự án phụ trợ</h2>
@@ -361,7 +373,7 @@
                     </div>
                     <div class="project-card">
                         <h4>🚧 Đang phát triển</h4>
-                        <p>Hyggshi OS 3.0</p>
+                        <p>Hyggshi OS 3.0, Hyggshi OS Flex</p>
                     </div>
                     <div class="project-card">
                         <h4>⏸️ Tạm ngưng</h4>
