--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   }
   </script>
 
-  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="Resources/favicon.ico" />
     <link rel="stylesheet" href="style.css">
   <style>
     .gallery-section {
